--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@ body {
   align-items: center;
 }
 
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  margin: 10px;
+  gap: 10px;
+}
 .logOrSignContainer {
   display: flex;
   flex-direction: row;
